--- a/style2.css
+++ b/style2.css
@@ -32,8 +32,8 @@ h1 {
 }
 
 
-.name-info{
-    
+.name-info, .textbox, .email-info {
+
     display: flex;
     flex-direction: column;
     
@@ -48,7 +48,7 @@ label{
     
 }
 
-#first_name, #last_name, #email {
+#first-name, #last-name, #email {
     width: 400px;
     border-radius: 10px;
     padding: 20px 20px;
@@ -94,8 +94,36 @@ label{
 a {
     margin: 20px;
     padding: 10px;
-
     color: var(--secondary-label-color); 
     font-style: italic;
     display: inline-block;
  }
+
+
+ @media screen and (max-width: 600px) {
+
+    h1 {
+        text-align: center; 
+        font-size: 18px;
+    }
+
+    .name-info, .textbox, .email-info  {
+
+        font-size: 14px;
+    }
+
+
+    #first-name, #last-name, #email, #message {
+        width: 100%; 
+        padding: 15px; 
+        font-size: 12px;
+        align-items: start;
+    }
+
+    .submit-btn {
+        width: 100%; 
+        font-size: 12px;
+    }
+
+ 
+}
